--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nock": "^9.2.3",
     "nodemon": "^1.17.3",
     "nsp": "^2.1.0",
+    "rosie": "^1.6.0",
     "supertest": "^3.0.0"
   },
   "repository": {
