Modify user schema, make positions as an embedded model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -33,15 +33,25 @@
     "options": {
       "strictObjectIDCoercion": true
     },
-    "acls": [
-
-    ]
+    "acls": []
   },
   "Role": {
     "dataSource": "mongodb",
     "public": false
   },
   "user": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Position": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Project": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Techstack": {
     "dataSource": "mongodb",
     "public": true
   }
