--- a/server/model-config.json
+++ b/server/model-config.json
@@ -71,5 +71,9 @@
   "Techstack": {
     "dataSource": "mongodb",
     "public": true
+  },
+  "Skill": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
